--- a/index.html
+++ b/index.html
@@ -12,20 +12,25 @@
       padding: 0;
       color: #333;
     }
+
     header {
-      background: #222;
+      background: url('livros-fundo.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 60px 20px;
+      padding: 80px 20px;
+      box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.6);
     }
+
     header h1 {
-      margin: 0;
-      font-size: 2.5em;
+      font-size: 2.8em;
+      margin-bottom: 15px;
     }
+
     header p {
-      margin-top: 10px;
-      font-size: 1.2em;
+      font-size: 1.4em;
+      opacity: 0.9;
     }
+
     main {
       max-width: 1200px;
       margin: 40px auto;
@@ -35,29 +40,34 @@
       gap: 20px;
       justify-content: center;
     }
+
     .livro {
       background: white;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      width: 200px;
+      width: 180px;
       text-align: center;
       padding: 15px;
       transition: transform 0.2s;
     }
+
     .livro:hover {
       transform: translateY(-5px);
     }
+
     .livro img {
       width: 100%;
       height: auto;
       border-radius: 6px;
     }
+
     .livro h2 {
       font-size: 1em;
       margin: 10px 0;
       height: 40px;
       overflow: hidden;
     }
+
     .comprar-btn {
       background: #0073e6;
       color: white;
@@ -68,9 +78,11 @@
       margin-top: 10px;
       font-weight: bold;
     }
+
     .comprar-btn:hover {
       background: #005bb5;
     }
+
     @media (max-width: 600px) {
       .livro {
         width: 100%;
@@ -82,84 +94,74 @@
 <body>
 
 <header>
-  <h1>Club SVP School</h1>
-  <p>Os livros que vão mudar sua vida</p>
+  <h1>O próximo livro pode mudar a sua vida</h1>
+  <p>A curadoria que vai mudar brutalmente a sua forma de pensar.</p>
 </header>
 
 <main>
-  <!-- Livro 1 -->
+
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/81l3rZK4lnL._SL1500_.jpg" alt="Hábitos Atômicos" />
+    <img src="habitos-atomicos.jpg" alt="Hábitos Atômicos" />
     <h2>Hábitos Atômicos</h2>
     <a class="comprar-btn" href="https://amzn.to/44zObbc" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 2 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/61QJpJ+vqjL._SL1200_.jpg" alt="Mindset" />
+    <img src="mindset.jpg" alt="Mindset: A nova psicologia do sucesso" />
     <h2>Mindset: A nova psicologia do sucesso</h2>
     <a class="comprar-btn" href="https://amzn.to/4nlZ5sF" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 3 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/61N-8zfz2dL._SL1200_.jpg" alt="O Poder do Hábito" />
+    <img src="o-poder-do-habito.jpg" alt="O Poder do Hábito" />
     <h2>O Poder do Hábito</h2>
     <a class="comprar-btn" href="https://amzn.to/4ewG1E8" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 4 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/71L4FwFjSGL._SL1200_.jpg" alt="O Milagre da Manhã" />
+    <img src="o-milagre-da-manha.jpg" alt="O Milagre da Manhã" />
     <h2>O Milagre da Manhã</h2>
     <a class="comprar-btn" href="https://amzn.to/45E7AJd" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 5 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/71Lwl0I0N-L._SL1200_.jpg" alt="Comece pelo Porquê" />
+    <img src="comece-pelo-porque.jpg" alt="Comece pelo Porquê" />
     <h2>Comece pelo Porquê</h2>
     <a class="comprar-btn" href="https://amzn.to/40eedP1" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 6 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/71vTgfvk4eL._SL1200_.jpg" alt="O Livro Que Você Gostaria Que Todas as Pessoas Que Você Ama Lessem" />
-    <h2>O Livro Que Você Gostaria Que Todas as Pessoas Que Você Ama Lessem</h2>
+    <img src="o-livro-que-voce-gostaria.jpg" alt="O livro que você gostaria..." />
+    <h2>O livro que você gostaria...</h2>
     <a class="comprar-btn" href="https://amzn.to/4kf22Z3" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 7 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/71Tdu+bnZcL._SL1200_.jpg" alt="Quem Mexeu no Meu Queijo?" />
-    <h2>Quem Mexeu no Meu Queijo?</h2>
+    <img src="quem-mexeu-no-meu-queijo.jpg" alt="Quem Mexeu no Meu Queijo" />
+    <h2>Quem Mexeu no Meu Queijo</h2>
     <a class="comprar-btn" href="https://amzn.to/4lo7eLd" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 8 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/51TDcLTXWwL._SL1200_.jpg" alt="O Diário de um Mago" />
+    <img src="o-diario-de-um-mago.jpg" alt="O Diário de um Mago" />
     <h2>O Diário de um Mago</h2>
     <a class="comprar-btn" href="https://amzn.to/4elj8mO" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 9 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/91Yt1IhNtdL._SL1500_.jpg" alt="O Mito de Sísifo" />
+    <img src="o-mito-de-sisifo.jpg" alt="O Mito de Sísifo" />
     <h2>O Mito de Sísifo</h2>
     <a class="comprar-btn" href="https://amzn.to/44lZp1K" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 10 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/81KH5ySUzFL._SL1200_.jpg" alt="O Óbvio que Ignoramos" />
-    <h2>O Óbvio que Ignoramos</h2>
+    <img src="o-obvio-que-ignoramos.jpg" alt="O óbvio que ignoramos" />
+    <h2>O óbvio que ignoramos</h2>
     <a class="comprar-btn" href="https://amzn.to/4k9SwGA" target="_blank">Comprar Agora</a>
   </div>
 
-  <!-- Livro 11 -->
   <div class="livro">
-    <img src="https://m.media-amazon.com/images/I/51jHdPtgAkL._SL1200_.jpg" alt="Um Homem Chamado Merlin" />
+    <img src="um-homem-chamado-merlin.jpg" alt="Um Homem Chamado Merlin" />
     <h2>Um Homem Chamado Merlin</h2>
     <a class="comprar-btn" href="https://amzn.to/4lrmt6e" target="_blank">Comprar Agora</a>
   </div>
