--- a/index.html
+++ b/index.html
@@ -158,3 +158,56 @@
 
 </body>
 </html>
+  <div class="livro">
+    <img src="as-neves-do-kilimanjaro.jpg" alt="As Neves do Kilimanjaro" />
+    <h2>As Neves do Kilimanjaro</h2>
+    <a class="comprar-btn" href="https://amzn.to/444u5WD" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="a-volta-ao-mundo-em-80-dias.jpg" alt="A Volta ao Mundo em 80 Dias" />
+    <h2>A Volta ao Mundo em 80 Dias</h2>
+    <a class="comprar-btn" href="https://amzn.to/44CreEo" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="o-cerebro-de-buda.jpg" alt="O Cérebro de Buda" />
+    <h2>O Cérebro de Buda</h2>
+    <a class="comprar-btn" href="https://amzn.to/44msudx" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="a-arte-da-guerra.jpg" alt="A Arte da Guerra" />
+    <h2>A Arte da Guerra</h2>
+    <a class="comprar-btn" href="https://amzn.to/4keNQiS" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="mar-sem-fim.jpg" alt="Mar sem fim" />
+    <h2>Mar sem fim</h2>
+    <a class="comprar-btn" href="https://amzn.to/44hfZQo" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="moises-e-o-monoteismo.jpg" alt="Moisés e o Monoteísmo" />
+    <h2>Moisés e o Monoteísmo</h2>
+    <a class="comprar-btn" href="https://amzn.to/3Tekw14" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="nacao-dopamina.jpg" alt="Nação Dopamina" />
+    <h2>Nação Dopamina</h2>
+    <a class="comprar-btn" href="https://amzn.to/4luUWks" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="moby-dick.jpg" alt="Moby Dick" />
+    <h2>Moby Dick</h2>
+    <a class="comprar-btn" href="https://amzn.to/4kYk5nB" target="_blank">Comprar Agora</a>
+  </div>
+
+  <div class="livro">
+    <img src="o-ponto-da-virada.jpg" alt="O Ponto da Virada" />
+    <h2>O Ponto da Virada</h2>
+    <a class="comprar-btn" href="https://amzn.to/4nBfucW" target="_blank">Comprar Agora</a>
+  </div>
