--- a/index.html
+++ b/index.html
@@ -12,25 +12,22 @@
       padding: 0;
       color: #333;
     }
-
     header {
       background: url('livros-fundo.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
-      padding: 80px 20px;
+      padding: 60px 20px;
       box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.6);
     }
-
     header h1 {
-      font-size: 2.8em;
-      margin-bottom: 15px;
+      margin: 0;
+      font-size: 2.5em;
     }
-
     header p {
-      font-size: 1.4em;
-      opacity: 0.9;
+      margin-top: 10px;
+      font-size: 1.2em;
+      font-weight: 500;
     }
-
     main {
       max-width: 1200px;
       margin: 40px auto;
@@ -40,7 +37,6 @@
       gap: 20px;
       justify-content: center;
     }
-
     .livro {
       background: white;
       border-radius: 8px;
@@ -50,24 +46,20 @@
       padding: 15px;
       transition: transform 0.2s;
     }
-
     .livro:hover {
       transform: translateY(-5px);
     }
-
     .livro img {
       width: 100%;
       height: auto;
       border-radius: 6px;
     }
-
     .livro h2 {
       font-size: 1em;
       margin: 10px 0;
       height: 40px;
       overflow: hidden;
     }
-
     .comprar-btn {
       background: #0073e6;
       color: white;
@@ -78,11 +70,9 @@
       margin-top: 10px;
       font-weight: bold;
     }
-
     .comprar-btn:hover {
       background: #005bb5;
     }
-
     @media (max-width: 600px) {
       .livro {
         width: 100%;
@@ -99,6 +89,8 @@
 </header>
 
 <main>
+
+  <!-- LIVROS COM LINKS E IMAGENS -->
 
   <div class="livro">
     <img src="habitos-atomicos.jpg" alt="Hábitos Atômicos" />
@@ -143,8 +135,8 @@
   </div>
 
   <div class="livro">
-    <img src="o-obvio-que-ignoramos.jpg" alt="O óbvio que ignoramos" />
-    <h2>O óbvio que ignoramos</h2>
+    <img src="o-obvio-que-ignoramos.jpg" alt="O Óbvio que Ignoramos" />
+    <h2>O Óbvio que Ignoramos</h2>
     <a class="comprar-btn" href="https://amzn.to/4k9SwGA" target="_blank">Comprar Agora</a>
   </div>
 
@@ -154,10 +146,6 @@
     <a class="comprar-btn" href="https://amzn.to/4lrmt6e" target="_blank">Comprar Agora</a>
   </div>
 
-</main>
-
-</body>
-</html>
   <div class="livro">
     <img src="as-neves-do-kilimanjaro.jpg" alt="As Neves do Kilimanjaro" />
     <h2>As Neves do Kilimanjaro</h2>
@@ -183,8 +171,8 @@
   </div>
 
   <div class="livro">
-    <img src="mar-sem-fim.jpg" alt="Mar sem fim" />
-    <h2>Mar sem fim</h2>
+    <img src="mar-sem-fim.jpg" alt="Mar sem Fim" />
+    <h2>Mar sem Fim</h2>
     <a class="comprar-btn" href="https://amzn.to/44hfZQo" target="_blank">Comprar Agora</a>
   </div>
 
@@ -211,3 +199,8 @@
     <h2>O Ponto da Virada</h2>
     <a class="comprar-btn" href="https://amzn.to/4nBfucW" target="_blank">Comprar Agora</a>
   </div>
+
+</main>
+
+</body>
+</html>
