--- a/index.html
+++ b/index.html
@@ -204,3 +204,38 @@
 
 </body>
 </html>
+<div class="livro">
+  <img src="ecce-homo.jpg" alt="Ecce Homo" />
+  <h2>Ecce Homo</h2>
+  <a class="comprar-btn" href="https://amzn.to/3HZQNX6" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
+
+<div class="livro">
+  <img src="a-metamorfose.jpg" alt="A Metamorfose" />
+  <h2>A Metamorfose</h2>
+  <a class="comprar-btn" href="https://amzn.to/3HURRM7" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
+
+<div class="livro">
+  <img src="madame-bovary.jpg" alt="Madame Bovary" />
+  <h2>Madame Bovary</h2>
+  <a class="comprar-btn" href="https://amzn.to/4emLCN3" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
+
+<div class="livro">
+  <img src="a-causa-secreta.jpg" alt="A Causa Secreta" />
+  <h2>A Causa Secreta</h2>
+  <a class="comprar-btn" href="https://amzn.to/44tTkka" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
+
+<div class="livro">
+  <img src="do-amor.jpg" alt="Do Amor" />
+  <h2>Do Amor</h2>
+  <a class="comprar-btn" href="https://amzn.to/4eq0Ctx" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
+
+<div class="livro">
+  <img src="meditacoes.jpg" alt="Meditações" />
+  <h2>Meditações</h2>
+  <a class="comprar-btn" href="https://amzn.to/46fbA2U" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
