--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       color: #333;
     }
     header {
-      background: url('livros-fundo.jpg') center/cover no-repeat;
+      background: url('headline-fundo.jpg') center/cover no-repeat;
       color: white;
       text-align: center;
       padding: 60px 20px;
@@ -32,6 +32,8 @@
       max-width: 1200px;
       margin: 40px auto;
       padding: 0 20px;
+    }
+    .livros-container {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
@@ -89,153 +91,124 @@
 </header>
 
 <main>
+  <div class="livros-container">
 
-  <!-- LIVROS COM LINKS E IMAGENS -->
+    <div class="livro">
+      <img src="habitos-atomicos.jpg" alt="Hábitos Atômicos" />
+      <h2>Hábitos Atômicos</h2>
+      <a class="comprar-btn" href="https://amzn.to/44zObbc" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
 
-  <div class="livro">
-    <img src="habitos-atomicos.jpg" alt="Hábitos Atômicos" />
-    <h2>Hábitos Atômicos</h2>
-    <a class="comprar-btn" href="https://amzn.to/44zObbc" target="_blank">Comprar Agora</a>
+    <div class="livro">
+      <img src="poder-do-habito.jpg" alt="O Poder do Hábito" />
+      <h2>O Poder do Hábito</h2>
+      <a class="comprar-btn" href="https://amzn.to/4ewG1E8" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="o-milagre-da-manha.jpg" alt="O Milagre da Manhã" />
+      <h2>O Milagre da Manhã</h2>
+      <a class="comprar-btn" href="https://amzn.to/45E7AJd" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="comece-pelo-porque.jpg" alt="Comece pelo Porquê" />
+      <h2>Comece pelo Porquê</h2>
+      <a class="comprar-btn" href="https://amzn.to/40eedP1" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="as-neves-do-kilimanjaro.jpg" alt="As Neves do Kilimanjaro" />
+      <h2>As Neves do Kilimanjaro</h2>
+      <a class="comprar-btn" href="https://amzn.to/444u5WD" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="volta-ao-mundo-em-80-dias.jpg" alt="A Volta ao Mundo em 80 Dias" />
+      <h2>A Volta ao Mundo em 80 Dias</h2>
+      <a class="comprar-btn" href="https://amzn.to/44CreEo" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="o-cerebro-de-buda.jpg" alt="O Cérebro de Buda" />
+      <h2>O Cérebro de Buda</h2>
+      <a class="comprar-btn" href="https://amzn.to/44msudx" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="a-arte-da-guerra.jpg" alt="A Arte da Guerra" />
+      <h2>A Arte da Guerra</h2>
+      <a class="comprar-btn" href="https://amzn.to/4keNQiS" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="mar-sem-fim.jpg" alt="Mar Sem Fim" />
+      <h2>Mar Sem Fim</h2>
+      <a class="comprar-btn" href="https://amzn.to/44hfZQo" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="moises-e-o-monoteismo.jpg" alt="Moises e o Monoteísmo" />
+      <h2>Moises e o Monoteísmo</h2>
+      <a class="comprar-btn" href="https://amzn.to/3Tekw14" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="nacao-dopamina.jpg" alt="Nação Dopamina" />
+      <h2>Nação Dopamina</h2>
+      <a class="comprar-btn" href="https://amzn.to/4luUWks" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="moby-dick.jpg" alt="Moby Dick" />
+      <h2>Moby Dick</h2>
+      <a class="comprar-btn" href="https://amzn.to/4kYk5nB" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="o-ponto-da-virada.jpg" alt="O Ponto da Virada" />
+      <h2>O Ponto da Virada</h2>
+      <a class="comprar-btn" href="https://amzn.to/4nBfucW" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="ecce-homo.jpg" alt="Ecce Homo" />
+      <h2>Ecce Homo</h2>
+      <a class="comprar-btn" href="https://amzn.to/3HZQNX6" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="a-metamorfose.jpg" alt="A Metamorfose" />
+      <h2>A Metamorfose</h2>
+      <a class="comprar-btn" href="https://amzn.to/3HURRM7" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="madame-bovary.jpg" alt="Madame Bovary" />
+      <h2>Madame Bovary</h2>
+      <a class="comprar-btn" href="https://amzn.to/4emLCN3" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="a-causa-secreta.jpg" alt="A Causa Secreta" />
+      <h2>A Causa Secreta</h2>
+      <a class="comprar-btn" href="https://amzn.to/44tTkka" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="do-amor.jpg" alt="Do Amor" />
+      <h2>Do Amor</h2>
+      <a class="comprar-btn" href="https://amzn.to/4eq0Ctx" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
+    <div class="livro">
+      <img src="meditacoes.jpg" alt="Meditações" />
+      <h2>Meditações</h2>
+      <a class="comprar-btn" href="https://amzn.to/46fbA2U" target="_blank" rel="noopener">Comprar Agora</a>
+    </div>
+
   </div>
-
-  <div class="livro">
-    <img src="o-poder-do-habito.jpg" alt="O Poder do Hábito" />
-    <h2>O Poder do Hábito</h2>
-    <a class="comprar-btn" href="https://amzn.to/4ewG1E8" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-milagre-da-manha.jpg" alt="O Milagre da Manhã" />
-    <h2>O Milagre da Manhã</h2>
-    <a class="comprar-btn" href="https://amzn.to/45E7AJd" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="comece-pelo-porque.jpg" alt="Comece pelo Porquê" />
-    <h2>Comece pelo Porquê</h2>
-    <a class="comprar-btn" href="https://amzn.to/40eedP1" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="quem-mexeu-no-meu-queijo.jpg" alt="Quem Mexeu no Meu Queijo" />
-    <h2>Quem Mexeu no Meu Queijo</h2>
-    <a class="comprar-btn" href="https://amzn.to/4lo7eLd" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-diario-de-um-mago.jpg" alt="O Diário de um Mago" />
-    <h2>O Diário de um Mago</h2>
-    <a class="comprar-btn" href="https://amzn.to/4elj8mO" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-mito-de-sisifo.jpg" alt="O Mito de Sísifo" />
-    <h2>O Mito de Sísifo</h2>
-    <a class="comprar-btn" href="https://amzn.to/44lZp1K" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-obvio-que-ignoramos.jpg" alt="O Óbvio que Ignoramos" />
-    <h2>O Óbvio que Ignoramos</h2>
-    <a class="comprar-btn" href="https://amzn.to/4k9SwGA" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="um-homem-chamado-merlin.jpg" alt="Um Homem Chamado Merlin" />
-    <h2>Um Homem Chamado Merlin</h2>
-    <a class="comprar-btn" href="https://amzn.to/4lrmt6e" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="as-neves-do-kilimanjaro.jpg" alt="As Neves do Kilimanjaro" />
-    <h2>As Neves do Kilimanjaro</h2>
-    <a class="comprar-btn" href="https://amzn.to/444u5WD" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="a-volta-ao-mundo-em-80-dias.jpg" alt="A Volta ao Mundo em 80 Dias" />
-    <h2>A Volta ao Mundo em 80 Dias</h2>
-    <a class="comprar-btn" href="https://amzn.to/44CreEo" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-cerebro-de-buda.jpg" alt="O Cérebro de Buda" />
-    <h2>O Cérebro de Buda</h2>
-    <a class="comprar-btn" href="https://amzn.to/44msudx" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="a-arte-da-guerra.jpg" alt="A Arte da Guerra" />
-    <h2>A Arte da Guerra</h2>
-    <a class="comprar-btn" href="https://amzn.to/4keNQiS" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="mar-sem-fim.jpg" alt="Mar sem Fim" />
-    <h2>Mar sem Fim</h2>
-    <a class="comprar-btn" href="https://amzn.to/44hfZQo" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="moises-e-o-monoteismo.jpg" alt="Moisés e o Monoteísmo" />
-    <h2>Moisés e o Monoteísmo</h2>
-    <a class="comprar-btn" href="https://amzn.to/3Tekw14" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="nacao-dopamina.jpg" alt="Nação Dopamina" />
-    <h2>Nação Dopamina</h2>
-    <a class="comprar-btn" href="https://amzn.to/4luUWks" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="moby-dick.jpg" alt="Moby Dick" />
-    <h2>Moby Dick</h2>
-    <a class="comprar-btn" href="https://amzn.to/4kYk5nB" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="o-ponto-da-virada.jpg" alt="O Ponto da Virada" />
-    <h2>O Ponto da Virada</h2>
-    <a class="comprar-btn" href="https://amzn.to/4nBfucW" target="_blank">Comprar Agora</a>
-  </div>
-
 </main>
 
 </body>
 </html>
-<div class="livro">
-  <img src="ecce-homo.jpg" alt="Ecce Homo" />
-  <h2>Ecce Homo</h2>
-  <a class="comprar-btn" href="https://amzn.to/3HZQNX6" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
-
-<div class="livro">
-  <img src="a-metamorfose.jpg" alt="A Metamorfose" />
-  <h2>A Metamorfose</h2>
-  <a class="comprar-btn" href="https://amzn.to/3HURRM7" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
-
-<div class="livro">
-  <img src="madame-bovary.jpg" alt="Madame Bovary" />
-  <h2>Madame Bovary</h2>
-  <a class="comprar-btn" href="https://amzn.to/4emLCN3" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
-
-<div class="livro">
-  <img src="a-causa-secreta.jpg" alt="A Causa Secreta" />
-  <h2>A Causa Secreta</h2>
-  <a class="comprar-btn" href="https://amzn.to/44tTkka" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
-
-<div class="livro">
-  <img src="do-amor.jpg" alt="Do Amor" />
-  <h2>Do Amor</h2>
-  <a class="comprar-btn" href="https://amzn.to/4eq0Ctx" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
-
-<div class="livro">
-  <img src="meditacoes.jpg" alt="Meditações" />
-  <h2>Meditações</h2>
-  <a class="comprar-btn" href="https://amzn.to/46fbA2U" target="_blank" rel="noopener">Comprar Agora</a>
-</div>
