--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       padding: 0;
       color: #333;
     }
-
     header {
       background: url('livros-fundo.jpg') center/cover no-repeat;
       color: white;
@@ -20,18 +19,15 @@
       padding: 60px 20px;
       box-shadow: inset 0 0 0 1000px rgba(0,0,0,0.6);
     }
-
     header h1 {
       margin: 0;
       font-size: 2.5em;
     }
-
     header p {
       margin-top: 10px;
       font-size: 1.2em;
       font-weight: 500;
     }
-
     main {
       max-width: 1200px;
       margin: 40px auto;
@@ -41,7 +37,6 @@
       gap: 20px;
       justify-content: center;
     }
-
     .livro {
       background: white;
       border-radius: 8px;
@@ -51,24 +46,20 @@
       padding: 15px;
       transition: transform 0.2s;
     }
-
     .livro:hover {
       transform: translateY(-5px);
     }
-
     .livro img {
       width: 100%;
       height: auto;
       border-radius: 6px;
     }
-
     .livro h2 {
       font-size: 1em;
       margin: 10px 0;
       height: 40px;
       overflow: hidden;
     }
-
     .comprar-btn {
       background: #0073e6;
       color: white;
@@ -79,11 +70,9 @@
       margin-top: 10px;
       font-weight: bold;
     }
-
     .comprar-btn:hover {
       background: #005bb5;
     }
-
     @media (max-width: 600px) {
       .livro {
         width: 100%;
@@ -101,6 +90,7 @@
 
 <main>
 
+  <!-- Blocos de livros -->
   <div class="livro">
     <img src="habitos-atomicos.jpg" alt="Hábitos Atômicos" />
     <h2>Hábitos Atômicos</h2>
@@ -108,7 +98,7 @@
   </div>
 
   <div class="livro">
-    <img src="milagre-da-manha.jpg" alt="O Milagre da Manhã" />
+    <img src="o-milagre-da-manha.jpg" alt="O Milagre da Manhã" />
     <h2>O Milagre da Manhã</h2>
     <a class="comprar-btn" href="https://amzn.to/45E7AJd" target="_blank">Comprar Agora</a>
   </div>
@@ -126,21 +116,15 @@
   </div>
 
   <div class="livro">
-    <img src="diario-de-um-mago.jpg" alt="O Diário de um Mago" />
+    <img src="o-diario-de-um-mago.jpg" alt="O Diário de um Mago" />
     <h2>O Diário de um Mago</h2>
     <a class="comprar-btn" href="https://amzn.to/4elj8mO" target="_blank">Comprar Agora</a>
   </div>
 
   <div class="livro">
-    <img src="mito-de-sisifo.jpg" alt="O Mito de Sísifo" />
+    <img src="o-mito-de-sisifo.jpg" alt="O Mito de Sísifo" />
     <h2>O Mito de Sísifo</h2>
     <a class="comprar-btn" href="https://amzn.to/44lZp1K" target="_blank">Comprar Agora</a>
-  </div>
-
-  <div class="livro">
-    <img src="obvio-que-ignoramos.jpg" alt="O Óbvio que Ignoramos" />
-    <h2>O Óbvio que Ignoramos</h2>
-    <a class="comprar-btn" href="https://amzn.to/4k9SwGA" target="_blank">Comprar Agora</a>
   </div>
 
   <div class="livro">
@@ -156,20 +140,20 @@
   </div>
 
   <div class="livro">
-    <img src="cerebro-de-buda.jpg" alt="O Cérebro de Buda" />
+    <img src="o-cerebro-de-buda.jpg" alt="O Cérebro de Buda" />
     <h2>O Cérebro de Buda</h2>
     <a class="comprar-btn" href="https://amzn.to/44msudx" target="_blank">Comprar Agora</a>
   </div>
 
   <div class="livro">
-    <img src="arte-da-guerra.jpg" alt="A Arte da Guerra" />
+    <img src="a-arte-da-guerra.jpg" alt="A Arte da Guerra" />
     <h2>A Arte da Guerra</h2>
     <a class="comprar-btn" href="https://amzn.to/4keNQiS" target="_blank">Comprar Agora</a>
   </div>
 
   <div class="livro">
-    <img src="mar-sem-fim.jpg" alt="Mar Sem Fim" />
-    <h2>Mar Sem Fim</h2>
+    <img src="mar-sem-fim.jpg" alt="Mar sem Fim" />
+    <h2>Mar sem Fim</h2>
     <a class="comprar-btn" href="https://amzn.to/44hfZQo" target="_blank">Comprar Agora</a>
   </div>
 
@@ -192,8 +176,8 @@
   </div>
 
   <div class="livro">
-    <img src="ponto-de-virada.jpg" alt="O Ponto de Virada" />
-    <h2>O Ponto de Virada</h2>
+    <img src="o-ponto-da-virada.jpg" alt="O Ponto da Virada" />
+    <h2>O Ponto da Virada</h2>
     <a class="comprar-btn" href="https://amzn.to/4nBfucW" target="_blank">Comprar Agora</a>
   </div>
 
@@ -204,7 +188,7 @@
   </div>
 
   <div class="livro">
-    <img src="metamorfose.jpg" alt="A Metamorfose" />
+    <img src="a-metamorfose.jpg" alt="A Metamorfose" />
     <h2>A Metamorfose</h2>
     <a class="comprar-btn" href="https://amzn.to/3HURRM7" target="_blank">Comprar Agora</a>
   </div>
@@ -216,13 +200,13 @@
   </div>
 
   <div class="livro">
-    <img src="causa-secreta.jpg" alt="A Causa Secreta" />
+    <img src="a-causa-secreta.jpg" alt="A Causa Secreta" />
     <h2>A Causa Secreta</h2>
     <a class="comprar-btn" href="https://amzn.to/44tTkka" target="_blank">Comprar Agora</a>
   </div>
 
   <div class="livro">
-    <img src="do-amor.jpg" alt="Do Amor - Stendhal" />
+    <img src="do-amor.jpg" alt="Do Amor" />
     <h2>Do Amor</h2>
     <a class="comprar-btn" href="https://amzn.to/4eq0Ctx" target="_blank">Comprar Agora</a>
   </div>
