--- a/index.html
+++ b/index.html
@@ -221,3 +221,8 @@
 
 </body>
 </html>
+<div class="livro">
+  <img src="sobre-sentimentos-e-sombra.jpg" alt="Sobre Sentimentos e Sombra" />
+  <h2>Sobre Sentimentos e Sombra</h2>
+  <a class="comprar-btn" href="https://amzn.to/44AKMt0" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
