--- a/index.html
+++ b/index.html
@@ -226,3 +226,8 @@
   <h2>Sobre Sentimentos e Sombra</h2>
   <a class="comprar-btn" href="https://amzn.to/44AKMt0" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="o-poder-do-subconsciente.jpg" alt="O Poder do Subconsciente" />
+  <h2>O Poder do Subconsciente</h2>
+  <a class="comprar-btn" href="https://amzn.to/3IN5E7C" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
