--- a/index.html
+++ b/index.html
@@ -231,3 +231,8 @@
   <h2>O Poder do Subconsciente</h2>
   <a class="comprar-btn" href="https://amzn.to/3IN5E7C" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="sapiens.jpg" alt="Sapiens: Uma Breve História da Humanidade" />
+  <h2>Sapiens: Uma Breve História da Humanidade</h2>
+  <a class="comprar-btn" href="https://amzn.to/3GIsnBm" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
