--- a/index.html
+++ b/index.html
@@ -236,3 +236,8 @@
   <h2>Sapiens: Uma Breve História da Humanidade</h2>
   <a class="comprar-btn" href="https://amzn.to/3GIsnBm" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="o-poder-do-habito.jpg" alt="O Poder do Hábito" />
+  <h2>O Poder do Hábito</h2>
+  <a class="comprar-btn" href="https://amzn.to/4kGHR6w" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
