--- a/index.html
+++ b/index.html
@@ -241,3 +241,8 @@
   <h2>O Poder do Hábito</h2>
   <a class="comprar-btn" href="https://amzn.to/4kGHR6w" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="o-alquimista.jpg" alt="O Alquimista" />
+  <h2>O Alquimista</h2>
+  <a class="comprar-btn" href="https://amzn.to/3TJLCgI" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
