--- a/index.html
+++ b/index.html
@@ -246,3 +246,8 @@
   <h2>O Alquimista</h2>
   <a class="comprar-btn" href="https://amzn.to/3TJLCgI" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="hamlet.jpg" alt="Hamlet" />
+  <h2>Hamlet</h2>
+  <a class="comprar-btn" href="https://amzn.to/44SRr0A" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
