--- a/index.html
+++ b/index.html
@@ -251,3 +251,8 @@
   <h2>Hamlet</h2>
   <a class="comprar-btn" href="https://amzn.to/44SRr0A" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="a-psicologia-financeira.jpg" alt="A Psicologia Financeira" />
+  <h2>A Psicologia Financeira</h2>
+  <a class="comprar-btn" href="https://amzn.to/4kKjN2T" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
