--- a/index.html
+++ b/index.html
@@ -256,3 +256,8 @@
   <h2>A Psicologia Financeira</h2>
   <a class="comprar-btn" href="https://amzn.to/4kKjN2T" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="as-5-linguagens-do-amor.jpg" alt="As 5 Linguagens do Amor" />
+  <h2>As 5 Linguagens do Amor</h2>
+  <a class="comprar-btn" href="https://amzn.to/4eXrpOf" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
