--- a/index.html
+++ b/index.html
@@ -261,3 +261,8 @@
   <h2>As 5 Linguagens do Amor</h2>
   <a class="comprar-btn" href="https://amzn.to/4eXrpOf" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="agilidade-emocional.jpg" alt="Agilidade Emocional" />
+  <h2>Agilidade Emocional</h2>
+  <a class="comprar-btn" href="https://amzn.to/4kNYi1d" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
