--- a/index.html
+++ b/index.html
@@ -266,3 +266,8 @@
   <h2>Agilidade Emocional</h2>
   <a class="comprar-btn" href="https://amzn.to/4kNYi1d" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="homo-deus.jpg" alt="Homo Deus" />
+  <h2>Homo Deus</h2>
+  <a class="comprar-btn" href="https://amzn.to/44Hz6mM" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
