--- a/index.html
+++ b/index.html
@@ -271,3 +271,8 @@
   <h2>Homo Deus</h2>
   <a class="comprar-btn" href="https://amzn.to/44Hz6mM" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="o-poder-da-resiliencia.jpg" alt="O Poder da Resiliência" />
+  <h2>O Poder da Resiliência</h2>
+  <a class="comprar-btn" href="https://amzn.to/44xTTum" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
