--- a/index.html
+++ b/index.html
@@ -276,3 +276,8 @@
   <h2>O Poder da Resiliência</h2>
   <a class="comprar-btn" href="https://amzn.to/44xTTum" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="os-arquetipos-e-o-inconsciente-coletivo.jpg" alt="Os Arquétipos e o Inconsciente Coletivo" />
+  <h2>Os Arquétipos e o Inconsciente Coletivo</h2>
+  <a class="comprar-btn" href="https://amzn.to/44PZoTV" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
