--- a/index.html
+++ b/index.html
@@ -281,3 +281,8 @@
   <h2>Os Arquétipos e o Inconsciente Coletivo</h2>
   <a class="comprar-btn" href="https://amzn.to/44PZoTV" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="odisseia.jpg" alt="Odisseia" />
+  <h2>Odisseia</h2>
+  <a class="comprar-btn" href="https://amzn.to/40WfqdO" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
