--- a/index.html
+++ b/index.html
@@ -286,3 +286,8 @@
   <h2>Odisseia</h2>
   <a class="comprar-btn" href="https://amzn.to/40WfqdO" target="_blank" rel="noopener">Comprar Agora</a>
 </div>
+<div class="livro">
+  <img src="admiravel-mundo-novo.jpg" alt="Admirável Mundo Novo" />
+  <h2>Admirável Mundo Novo</h2>
+  <a class="comprar-btn" href="https://amzn.to/3UgzQul" target="_blank" rel="noopener">Comprar Agora</a>
+</div>
