--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
         max-width: 300px;
       }
     }
+    .livro {
+  flex: 0 0 180px;
+  box-sizing: border-box;
+}
+
   </style>
 </head>
 <body>
